--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "gridfs-stream": "^1.1.1",
     "i18n": "^0.15.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.48",
+    "mongodb": "^5.9.1",
+    "mongoose": "^8.14.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.9"
   }
 }
